feat: completed upto the chapter 4; deviation from normality where we are dealing with the skewness and kurtosis

--- a/3_measuing_max_drawdown.ipynb
+++ b/3_measuing_max_drawdown.ipynb
@@ -26,6 +26,7 @@
     "\n",
     "##### Construction of a Wealth Index\n",
     "1. Computing drawdowns is to construct a **wealth index** hypothetical **Buy-And-Hold** investment in the asset.\n",
+    "    - can be calculated by the cummulative product of the $(1+return\\_rate)$ of the asset price.\n",
     "2. Look at the **Prior Peak** at any point in time.\n",
     "    - What is the highest price that I have experienced in the strategy at that point of time, i.e. in the given timeframe.\n",
     "    - Drawdown: the price difference between **the Prior Peak**, which is the possible highest price within the given timeframe.\n",
@@ -36,7 +37,7 @@
     "##### Risk Adjustment Ratio Using Drawdown\n",
     "- `The Calmar Ratio` is defined by as follow:\n",
     "    - the ratio of the annualized return over the trailing 36 months to the **Maximum Drawdown** over those trailing 36 months\n",
-    "        $$ \\frac{AnnualizedReturnOverTheTrailing36Mongths}{MaximumDrawdownOverThoseTrailing36Months} $$\n",
+    "        $$ \\frac{AnnualizedReturnOverTheTrailing36Months}{MaximumDrawdownOverThoseTrailing36Months} $$\n",
     "\n",
     "##### Cautious Note Regarding the Maximum Drawdown\n",
     "It is important to note that it is not really a perfect measure.\n",
