feat: added chapter 7

--- a/lib/6_estimating_var.ipynb
+++ b/lib/6_estimating_var.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "##### Historical Methodology\n",
-    "- Calculation of **VaR** base don the **distribution of historical changes** in the value of the **current portfolio** under market prices over the **specified historical observation window**.\n",
+    "- Calculation of **VaR** based on the **distribution of historical changes** in the value of the **current portfolio** under market prices over the **specified historical observation window**.\n",
     "- take the sample of returns and look at and throw away the respective worst case based on the given confidence level, and then focusing on the remaining worst outcome.\n",
     "- Pros \n",
     "    1. There is no assumption about asset-retur distribution.\n",
@@ -48,7 +48,7 @@
     "- the simplest example of a parametric assumption is to assume a Gaussian Distribution.\n",
     "    - If we assume the Gaussian Distribution, we only need to estimate the mean and voltility of the distribution.\n",
     "- looking at the Alpha Quantile of the Standard Normal Distribution and that will compute the estimates the value of value at risk needed.\n",
-    "    - where the Alpha Quantile, $ \\alpha $, is the point of $x$ such that the probability of a random variable from the standard normal distribution being less or equal to $x$ is $\\alpha$.\n"
+    "    - where the Alpha Quantile, $ \\alpha $, is the point of $x$ such that the probability of a random variable from the standard normal distribution being less or equal to $x$ is $\\alpha$."
    ]
   }
  ],
