feat: finished chapter 6, estimating var using various methods

--- a/lib/5_downside_risk_measures.ipynb
+++ b/lib/5_downside_risk_measures.ipynb
@@ -26,8 +26,10 @@
     "##### Value at Risk - VaR\n",
     "- VaR is explicitly expressed as a positive number.\n",
     "- represents the Maximum \"expected\" loss over a given time period.\n",
+    "    - \"What is the maximum expected loss over a given time horizon, at a given confidence level?\"\n",
     "    - The greater value of VaR, the greater chance of the loss.\n",
-    "- The maximum loss that can occur to a portfolio holding with a given probability. \n",
+    "- Confidence Level: The probability that the actual loss will not exceed the VaR value. Common confidence level used are 99% or 95%.\n",
+    "- The maximum loss that can occur to a portfolio holding with a given probability.\n",
     "    1. We, fisrtly, define a specified confidence level, let's say 99% for now.\n",
     "        - that we are looking at the worst possible outcome after excluding the one percent extreme losses.\n",
     "    2. We specify the time period that we're looking at, let's say a month.\n",
@@ -48,7 +50,10 @@
     "    - Where $ -E(R|R\\leq -VaR) $ is **the Expected Return of conditional upon the return being less than VaR**.\n",
     "    - Since it is expressed as the positive number, there is minus sign at the front of the expected returns.\n",
     "    - $ f_R $ is the probability density function of the return distribution.\n",
-    "    - $ F_R $ is the cumulative probability distribution function of the return distribution. "
+    "    - $ F_R $ is the cumulative probability distribution function of the return distribution.\n",
+    "- Caputres tail risk: CVaR considers the potential losses that lie beyond the VaR threshold, providing a more comprehensive assessment of the downside risk.\n",
+    "- Sub-additivity: CVaR is a sub-additive risk measure, meaning that the CVaR of a portfolio is less than or equal to the sum of the CVaRs of its individual components. This is a desirable property for risk management.\n",
+    "- Coherence: CVaR satisfies the mathematical properties of a coherent risk measure, making it a more robust and reliable risk metric compared to VaR. "
    ]
   },
   {
@@ -159,12 +164,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import edhec_risk_kit as erk\n",
+    "import portfolio_management_lib as erk\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
@@ -183,14 +188,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/joe/Projects/portfolioManagement/edhec_risk_kit.py:23: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "/home/joe/Study/portfolio_management/lib/portfolio_management_lib.py:84: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
       "  hfi = pd.read_csv(\"data/edhec-hedgefundindices.csv\",\n"
      ]
     },
@@ -365,7 +370,7 @@
        "1997-05            0.0197          0.0173        -0.0737          0.0275  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
