feat: added a comment

--- a/lib/6_estimating_var.ipynb
+++ b/lib/6_estimating_var.ipynb
@@ -796,8 +796,8 @@
    ],
    "source": [
     "var_table = [\n",
-    "    port.var_gaussian(hfi),\n",
-    "    port.var_gaussian(hfi, modified = True),\n",
+    "    port.var_gaussian(hfi), # Parametric Gaussian\n",
+    "    port.var_gaussian(hfi, modified = True), # Non Parametric Gaussian using Cornish-Fisher Modification using Kurtosis and Skewness\n",
     "    port.var_historic(hfi),\n",
     "]\n",
     "\n",
