feat: added contents on chapter 7 and library

--- a/lib/7_efficient_frontier_part_1.ipynb
+++ b/lib/7_efficient_frontier_part_1.ipynb
@@ -44,6 +44,23 @@
    "metadata": {},
    "source": [
     "### The Efficient Frontier\n",
+    "- As mentioned above, when we have two assets and aloocate the capital across these two assets, we are finding that we were able to build portfolios that had lower volatility than either one of the two assets.\n",
+    "- Now we introduce the third asset, we can expand the space of portfolios.\n",
+    "\n",
+    "##### So, what is the Efficient Frontier?\n",
+    "- the Efficient Frontier is the line of curve on the edge of the Region of Possible Portfolios, that is considered as the best.\n",
+    "- Portfolios on the edge of the Region of Possible Portfolios represent the best you can do either in terms of expected return or expected volatility.\n",
+    "- Only portfolios that a mean-variance investor should be interested in.\n",
+    "    - A Mean-Variance Investors: The Investors who take care of volatility and returns.\n",
+    "    - The portfolios that offer the lowest volatility for a given level of return or\n",
+    "    - The portfolios of the highest expected returns for a given level of volatility."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The Efficient Frontier\n",
     "How to compute the efficient frontier when we have a set of expected returns, volatilities (or variance) and correlations (or covariance). It is a fair question as to how we can get these numbers for the future, but for now, we assume that historic returns are a reasonable assumption."
    ]
   },
