feat: added note on chapter 7

--- a/lib/2_volatility_sd_var.ipynb
+++ b/lib/2_volatility_sd_var.ipynb
@@ -9,7 +9,7 @@
     "    - the price is deviating away from the mean more often and significantly.\n",
     "\n",
     "##### Variance\n",
-    "- take the return seriese and de-meaning\n",
+    "- take the return series and de-meaning\n",
     "    - We compute the Average of the Square of the Deviations from the mean. This measure is called **variance** and is computed as follows:\n",
     "    \n",
     "        $$ \\sigma_{R}^2 = \\frac{1}{N} \\sum_{i=1}^{N}(R_i - \\bar{R})^2 $$  \n",
@@ -34,7 +34,7 @@
     "    - There are approximately 252, i.e. trading days per** calendar year\n",
     "    - Exmaple:\n",
     "        - The standard deviation of a stock has daily return series is $0.1\\%$\n",
-    "            $$ 0.001 \\times \\sqrt{252} = 1.58\\% $$"
+    "        $$ 0.001 \\times \\sqrt{252} = 1.58\\% $$"
    ]
   },
   {
