--- a/lib/7_efficient_frontier_part_1.ipynb
+++ b/lib/7_efficient_frontier_part_1.ipynb
@@ -60,7 +60,76 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### The Efficient Frontier\n",
+    "### Quadprog to Draw the Efficient Frontier\n",
+    "- Convex Optimization to draw the Efficient Frontier\n",
+    "    - Given a set of asset returns volatilities and correlations we can plot the efficient frontier.\n",
+    "    - We need to have expression for the return and volatility for a portfolio.\n",
+    "        - Finding the series of point in the risk-return space, the Efficient Frontier, then we can plot the Efficient Frontier.\n",
+    "##### Return\n",
+    "- the weighted average of the returns\n",
+    "$$ \\sum_{i = 1}^{k}{w_i \\cdot R_i} $$\n",
+    "##### Volatility, Portfolio Variance, i.e., $\\sigma^2$\n",
+    "- the simple generalization of the formula for the 2-assets case.\n",
+    "- 2-Assets Case\n",
+    "    $$ \\sigma^2(w_A, w_B) = \\sigma_{A}^2\\omega_{A}^2 + \\sigma_{B}^2\\omega_B^2 + 2w_Aw_B\\sigma_A\\sigma_B\\rho_{A, B} $$\n",
+    "    - Where $\\rho_{A, B}$ is the correlation between asset A and B.\n",
+    "- Portfolio Variance\n",
+    "    $$ \\sigma_P^2 = \\sum_{i = 1}^k\\sum_{j = 1}^k w_iw_j\\sigma_i\\sigma_j\\rho_{i, j} $$\n",
+    "- Sum of $w$ for every possible combination of i and j\n",
+    "    \n",
+    "    $ \\sigma_i\\sigma_j\\rho_{ij} $: the Covariance, measuring how much two different assets/portfolios co-vary."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Matrix Form Expression for Portfolio Return\n",
+    "- Improve the volatility expression by using matrix notation.\n",
+    "- We start by constructing the followings:\n",
+    "    - the weight vector: $ k\\times 1 $ vector of weights.\n",
+    "    - R: $ k\\times 1 $ vector of asset returns.\n",
+    "    - Portfolio Return is equal to the weighted average of each portfolio's return.\n",
+    "    $$ R_p = w^T R $$\n",
+    "    - Where:\n",
+    "        - $R_p$: Return of the Portfolio\n",
+    "        - $w^T$: the Transpose of the weight vector, $w$\n",
+    "\n",
+    "### Matrix Form Expression for the Covariance Matrix\n",
+    "- The Covariance Matrix is symmetric square, $k\\times k$ matrix, where the ith and jth element is $\\sigma_{ij}$, covariance betweeen the asset-i and asset-j.\n",
+    "    - Where Covariance between i and j is equal to $\\sigma_i\\sigma_j\\rho_{ij}$.\n",
+    "- Each diagonal element of $\\sum$ is $ \\sigma_{ii} = \\sigma_i\\sigma_i\\rho_{ii} = \\sigma $\n",
+    "$$ \\sigma_p^2 = w^T\\sum w $$\n",
+    "- where\n",
+    "    - $\\sigma_p^2$: the portfolio matrix\n",
+    "    - $w^T$: the transpose of the weight vector\n",
+    "    - $w%: the weight vector\n",
+    "    - $\\sum$: the covariance matrix\n",
+    "- $\\sum_{ii}$: the volatility of the asset $i$\n",
+    "- Diagonal element of the covariance matrix is the variance of each asset.\n",
+    "\n",
+    "### Plotting the Efficient Frontier\n",
+    "- Start from the portfolio, which is know to be on the Efficient Frontier, more precisely, on the curve.\n",
+    "    - An asset with the lowest return\n",
+    "    - An asset wiht the highest return\n",
+    "- At this point, we know at least two points on the curve. Now, we use optimizer to find the minimum possible variance portfolio we can get on a certain level of return.\n",
+    "    - From minimum return to the maximum return and take that space and split it into grid.\n",
+    "    - and use optimizer to find the set of weight giving us the portfolio that minimizs the volatility for that level of return.\n",
+    "- In order to find the Efficient Frontier, recall that the portfolio on the Efficient Frontier is the one with the Minimum Volatility for a certain level of return.\n",
+    "##### Quadratic Form\n",
+    "Minimize: $ \\frac{1}{2}w^T\\sum w $\n",
+    "- Known as qudartic form, the input to hand over to quadratic optimizer.\n",
+    "subject to the followings:\n",
+    "- $w^T R = r_0$: Return must be at a certain level.\n",
+    "- $w^T 1 = 1$: The sum of weight of each asset is 1.\n",
+    "- $ w \\geq 0$: No shortage in the total weight."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Computation of the Efficient Frontier\n",
     "How to compute the efficient frontier when we have a set of expected returns, volatilities (or variance) and correlations (or covariance). It is a fair question as to how we can get these numbers for the future, but for now, we assume that historic returns are a reasonable assumption."
    ]
   },
@@ -340,6 +409,7 @@
     }
    ],
    "source": [
+    "# cleaning the label of data\n",
     "# since the column names have embedded spaces, we can strip out the leading and trailing spaces\n",
     "# in the Series by using the .str.strip() method.\n",
     "ind.columns = ind.columns.str.strip();\n",
@@ -414,7 +484,8 @@
     "%autoreload 2\n",
     "%matplotlib inline\n",
     "\n",
-    "ind = port.get_ind_returns()\n",
+    "# Ken French 30 Industry Portfolios Value Weighted Monthly Return\n",
+    "ind = port.get_ind_returns() \n",
     "ind.shape"
    ]
   },
