feat: added more contents on note

--- a/lib/3_measuing_max_drawdown.ipynb
+++ b/lib/3_measuing_max_drawdown.ipynb
@@ -18,27 +18,53 @@
     "### Measuring Max Drawdown\n",
     "- Risk: The probability of losing money\n",
     "- Maximum Drawdown\n",
-    "    - the maximum loss from the prvious high to a subsequent low\n",
+    "    - the maximum loss from the previous high to a subsequent low\n",
     "    - the worst possible return you could have seen if **'Buy High, Sell Low'**\n",
     "        - worst case measure\n",
     "        - a measure of downside risk\n",
-    "        - From a peak to a trough at any given point.\n",
-    "\n",
+    "        - From a peak to a trough at any given point."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Construction of a Wealth Index\n",
-    "1. Computing drawdowns is to construct a **wealth index** hypothetical **Buy-And-Hold** investment in the asset.\n",
+    "1. Computing drawdowns is to construct a **wealth index**, hypothetical **Buy-And-Hold** investment in the asset.\n",
     "    - can be calculated by the cummulative product of the $(1+return\\_rate)$ of the asset price.\n",
     "2. Look at the **Prior Peak** at any point in time.\n",
     "    - What is the highest price that I have experienced in the strategy at that point of time, i.e. in the given timeframe.\n",
     "    - Drawdown: the price difference between **the Prior Peak**, which is the possible highest price within the given timeframe.\n",
     "        - How much you feel that you have lost.\n",
     "    - Get the maximum drawdown: the maximum pric difference bewteen the prior peak and the trough.\n",
-    "3. We can plot the drawdowns over time to be able to see **how long it takes to recover** from the drawdowns.\n",
-    "\n",
+    "3. We can plot the drawdowns over time to be able to see **how long it takes to recover** from the drawdowns."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Risk Adjustment Ratio Using Drawdown\n",
-    "- `The Calmar Ratio` is defined by as follow:\n",
+    "- **The Calmar Ratio** is defined by as follow:\n",
     "    - the ratio of the annualized return over the trailing 36 months to the **Maximum Drawdown** over those trailing 36 months\n",
     "        $$ \\frac{AnnualizedReturnOverTheTrailing36Months}{MaximumDrawdownOverThoseTrailing36Months} $$\n",
-    "\n",
+    "    - Higher Calmar Ratio indicates better risk-adjsted performance.\n",
+    "    - Generally, a Calmar Ratio above 0.5 is considered good, above 1 is very good.\n",
+    "    - It is sensitive to the time period chosen, typically 36-month.\n",
+    "    - It can be heavily influenced by outliers or extreme events.\n",
+    "    - It may not be suitable for stratiges with frequent small drawdowns.\n",
+    "- Often used alongside other risk-adjusted measures like the Sharpe Ratio or Sortino Ratio for a comprehensive view of performance.\n",
+    "    - Pros:\n",
+    "        - Useful for evaluating strategies aiming to minimize large drawdowns, such as in managed futures or hedge fund strategies.\n",
+    "    - Cons:\n",
+    "        - Does not consider the frequency or severity of drawdowns below the maximum.\n",
+    "        - May not be suitable for comparing strategies with different frequencies."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Cautious Note Regarding the Maximum Drawdown\n",
     "It is important to note that it is not really a perfect measure.\n",
     "e.g.\n",
@@ -48,13 +74,18 @@
     "\n",
     "However, drawdowns are closely monitored and popular amongst practitioners, even though other measures like **VAR** or **CVAR** are more robust measures of *Extreme Risk*.\n",
     "\n",
-    "$\\rightarrow$ cannot be used as an ultimate index to make a trading decision upon.\n",
-    "\n",
+    "$\\rightarrow$ cannot be used as an ultimate index to make a trading decision upon."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "##### Review Question\n",
     "- E.g. Asset A loses 1% a month for 12 month and Asset B gains 1% per month for 12 months. They both produce the same return each month, thus their deviations from their mean is zero each month, and so the difference between the volatility of these two assets is 0.\n",
     "- Drawdown is a measure of downside risk. It is the theoretical loss you would have sustained if you had invested at the peak and sold at the trough.\n",
     "- Assuming the risk free rate is never negative. The Drawdown of an investment that returns the Risk Free rate every month is 0, since the investment return is always positivie. The price is never below the previous peak.\n",
-    "- The drawdown is the extent of loss suffered between the previous peak and the trough. Daily data will include all the troughs will include all the troughs and might include deeper troughs than month-end data."
+    "- The drawdown is the extent of loss suffered between the previous peak and the trough. Daily data will include all the troughs will include all the troughs and might include deeper troughs than month-end data.\n"
    ]
   },
   {
