--- a/lib/4_deviation_fron_normality.ipynb
+++ b/lib/4_deviation_fron_normality.ipynb
@@ -63,12 +63,14 @@
     "        - skewness = 0\n",
     "        - kurtosis = 0\n",
     "    - Alternative Hypothesis, $H_1$: THe do not follow a normal distribution.\n",
-    "    - If the data are indeed normally distributed, the JB statistic, asymptotically, follows a chi-squared distribution with two degree of freedom."
+    "    - If the data are indeed normally distributed, the JB statistic, asymptotically, follows a chi-squared distribution with two degree of freedom.\n",
+    "    - If the p-value is less than the chosen alpha-level, we reject the null hypothesis, i.e., the data does not follow the normal distribution.\n",
+    "    - If the p-value is greater than the chosen alpha-level, we fail to reject the null hypothesis, i.e., the data does follow the normal distribution."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -81,32 +83,32 @@
     }
    ],
    "source": [
-    "/%load_ext autoreload\n",
+    "%load_ext autoreload\n",
     "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import edhec_risk_kit as erk"
+    "import portfolio_management_lib as port"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/mnt/c/Users/wngks/projects/portfolioManagement/edhec_risk_kit.py:47: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
-      "  hfi = pd.read_csv(\"data/edhec-hedgefundindices.csv\",\n"
+      "/home/joe/Study/portfolio_management_prac/lib/portfolio_management_lib.py:88: UserWarning: Parsing dates in %d/%m/%Y format when dayfirst=False (the default) was specified. Pass `dayfirst=True` or specify a format to silence this warning.\n",
+      "  hfi = pd.read_csv(\n"
      ]
     },
     {
@@ -280,13 +282,13 @@
        "1997-05            0.0197          0.0173        -0.0737          0.0275  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "hfi = erk.get_hfi_returns()\n",
+    "hfi = port.get_hfi_returns()\n",
     "hfi.head()"
    ]
   },
@@ -304,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -433,7 +435,7 @@
        "Funds Of Funds          0.004262  0.0052  False"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -479,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +503,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -512,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,28 +526,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-3.940320291190085,\n",
-       " -2.6395922251089274,\n",
-       " -2.1244353839421204,\n",
-       " -1.8154697489380174,\n",
-       " -1.4091535635547947,\n",
-       " -1.3200833333543787,\n",
-       " -1.3008420437912207,\n",
-       " -1.1670674947992332,\n",
-       " -0.39022677418839474,\n",
-       " -0.36178308368373274,\n",
-       " 0.1736986449903901,\n",
-       " 0.7679748443026674,\n",
-       " 0.9829218839470764]"
+       "[np.float64(-3.940320291190085),\n",
+       " np.float64(-2.6395922251089274),\n",
+       " np.float64(-2.1244353839421204),\n",
+       " np.float64(-1.8154697489380174),\n",
+       " np.float64(-1.4091535635547947),\n",
+       " np.float64(-1.3200833333543787),\n",
+       " np.float64(-1.3008420437912207),\n",
+       " np.float64(-1.1670674947992332),\n",
+       " np.float64(-0.39022677418839474),\n",
+       " np.float64(-0.36178308368373274),\n",
+       " np.float64(0.1736986449903901),\n",
+       " np.float64(0.7679748443026674),\n",
+       " np.float64(0.9829218839470764)]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -564,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -573,7 +575,7 @@
        "(263, 13)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -584,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,16 +595,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(0.004755211682899364, 0.15737000972814627)"
+       "(np.float64(0.0002206961788184355), np.float64(0.1516860085076202))"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,36 +615,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.26406491199050625"
+       "np.float64(0.12622852144606458)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.skewness(normal_rets)"
+    "port.skewness(normal_rets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.26406491])"
+       "array([0.12622852])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -682,7 +684,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -704,18 +706,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.kurtosis(hfi).sort_values()"
+    "port.kurtosis(hfi).sort_values()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +728,7 @@
        "        9.12120787,  3.11777175,  4.07015278])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -760,16 +762,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SignificanceResult(statistic=3.0815882503621155, pvalue=0.21421092357619348)"
+       "SignificanceResult(statistic=np.float64(0.9030814087170435), pvalue=np.float64(0.6366465115522026))"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -787,16 +789,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "SignificanceResult(statistic=25656.585999171337, pvalue=0.0)"
+       "SignificanceResult(statistic=np.float64(25656.585999171337), pvalue=np.float64(0.0))"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -807,27 +809,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "True"
+       "np.True_"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.is_normal(normal_rets)"
+    "port.is_normal(normal_rets)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -849,13 +851,13 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.is_normal(hfi)"
+    "port.is_normal(hfi)"
    ]
   },
   {
@@ -868,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -879,19 +881,19 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ffme = erk.get_ffme_returns()\n",
-    "erk.skewness(ffme)"
+    "ffme = port.get_ffme_returns()\n",
+    "port.skewness(ffme)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -902,18 +904,18 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.kurtosis(ffme)"
+    "port.kurtosis(ffme)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -924,13 +926,13 @@
        "dtype: bool"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "erk.is_normal(ffme)"
+    "port.is_normal(ffme)"
    ]
   }
  ],
