--- a/lib/5_downside_risk_measures.ipynb
+++ b/lib/5_downside_risk_measures.ipynb
@@ -115,7 +115,7 @@
     "        - We subtract the meand and divide by standard deviation.\n",
     "        - **Normalized**: the process of scaling data to a standard range.\n",
     "- If asset returns are actually normally distributed, then we get the standard normal distribution.\n",
-    "- the VaR estimated the ALpha Confidence Level is simply given by\n",
+    "- the VaR estimated the Alpha Confidence Level is simply given by\n",
     "    $$ VaR_{\\alpha} = -(\\mu + {Z_{\\alpha}\\sigma})$$\n",
     "    - where\n",
     "        - $\\mu$: the estimate of the mean\n",
@@ -144,11 +144,11 @@
     "    - keep on model risk or introducing model risk in our estimation.\n",
     "\n",
     "##### Cornish-Fisher VaR\n",
-    "- An Alternative to PArametric exists **SEMI-PARAMETRIC APPROACH**.\n",
+    "- An Alternative to Parametric exists **SEMI-PARAMETRIC APPROACH**.\n",
     "    - does not force us to assume any particular return distribution.\n",
     "- Cornish-Fisher Expansion\n",
-    "    $$ \\tilde{Z_\\alpha} = Z_\\alpha+ \\frac{1}{6}(Z_{\\alpha^{2}-1})S+\\frac{1}{24}(Z_{\\alpha}^{3}-3Z_{\\alpha})(K-3)-\\frac{1}{36}(2Z_\\alpha^3-5Z_\\alpha)S^2 $$\n",
-    "    - the given expansion is useful because it allows us to realte the Alpha quantile of Non-Gaussian distribution to the Alpha Quantile of the Gaussian Distribution.\n",
+    "    $$ \\tilde{Z_\\alpha} = Z_\\alpha+ \\frac{1}{6}(Z_{\\alpha}^{^{2}} - 1)S + \\frac{1}{24}(Z_{\\alpha}^{3}-3Z_{\\alpha})(K-3)-\\frac{1}{36}(2Z_\\alpha^3-5Z_\\alpha)S^2 $$\n",
+    "    - the given expansion is useful because it allows us to relate the Alpha quantile of Non-Gaussian distribution to the Alpha Quantile of the Gaussian Distribution.\n",
     "    - Where\n",
     "        - $\\tilde{Z_\\alpha}$: which is the alpha quantile of the Non-Gaussian and we express it in-terms of $Z$ of Alpha, which is the Alpha Quantile of the Gaussian Distribution.\n",
     "        - $S$: Skewness\n",
