--- a/lib/7_efficient_frontier_part_1.ipynb
+++ b/lib/7_efficient_frontier_part_1.ipynb
@@ -135,14 +135,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1397/205007867.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/tmp/ipykernel_1085/205007867.py:2: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  ind = pd.read_csv(\"data/ind30_m_vw_rets.csv\", header=0, index_col=0, parse_dates=True)/100\n"
      ]
     }
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -353,7 +353,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,33 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['Food ', 'Beer ', 'Smoke', 'Games', 'Books', 'Hshld', 'Clths', 'Hlth ',\n",
-       "       'Chems', 'Txtls', 'Cnstr', 'Steel', 'FabPr', 'ElcEq', 'Autos', 'Carry',\n",
-       "       'Mines', 'Coal ', 'Oil  ', 'Util ', 'Telcm', 'Servs', 'BusEq', 'Paper',\n",
-       "       'Trans', 'Whlsl', 'Rtail', 'Meals', 'Fin  ', 'Other'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "ind.columns\n",
-    "# We can observe that column value has embedded spaces.\n",
-    "# We can strip out the leading and trailing spaces in the Series by using `.str.strip` method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -403,13 +377,16 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# We can observe that column value has embedded spaces.\n",
+    "# We can strip out the leading and trailing spaces in the Series by using `.str.strip` method.\n",
     "# cleaning the label of data\n",
+    "ind.columns\n",
     "# since the column names have embedded spaces, we can strip out the leading and trailing spaces\n",
     "# in the Series by using the .str.strip() method.\n",
     "ind.columns = ind.columns.str.strip();\n",
@@ -418,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -427,19 +404,19 @@
        "(1110, 30)"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ind.shape\n",
-    "# 1110 rows and 30 columns"
+    "# 1110 rows and 30 columns\n",
+    "ind.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -455,14 +432,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/home/joe/Study/portfolio_management/lib/portfolio_management_lib.py:210: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
+      "/home/joe/Study/portfolio_management_prac/lib/portfolio_management_lib.py:215: UserWarning: Could not infer format, so each element will be parsed individually, falling back to `dateutil`. To ensure parsing is consistent and as-expected, please specify a format.\n",
       "  ind = pd.read_csv(\"data/ind30_m_vw_rets.csv\", header=0, index_col=0, parse_dates=True)/100\n"
      ]
     },
@@ -472,7 +457,7 @@
        "(1110, 30)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,7 +476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -500,7 +485,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -524,7 +509,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -536,7 +521,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -556,7 +541,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -572,7 +557,7 @@
     }
    ],
    "source": [
-    "port.var_gaussian(ind).sort_values().plot.bar()"
+    "port.var_gaussian(ind, modified = False).sort_values().plot.bar()"
    ]
   },
   {
@@ -584,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -664,7 +649,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +700,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +721,7 @@
        "<Axes: title={'center': 'Industry Sharpe Ratio'}>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -757,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -766,7 +751,7 @@
        "<Axes: title={'center': 'Industry Sharpe Ratio after 2000'}>"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -797,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -836,7 +821,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 70,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -848,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +842,7 @@
        "<Axes: >"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -878,7 +863,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -887,7 +872,7 @@
        "(30, 30)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
