feat: implemented the efficient frontier for multiple asset

--- a/lib/4_deviation_from_normality.ipynb
+++ b/lib/4_deviation_from_normality.ipynb
@@ -12,7 +12,7 @@
     "##### The Gaussian Assumption\n",
     "- Standard simplifying assumption asset returns are **normally distributed**.\n",
     "- If we actually take a consideration of real-life stock, the return or loss is not normally distributed.  \n",
-    "    - In the Gaussian Assumption, we underestimate the maginude of the return.\n",
+    "    - In the Gaussian Assumption, we underestimate the magnitude of the return.\n",
     "\n",
     "##### Higher Order Moments\n",
     "- Skewness\n",
