--- a/lib/10_finding_MSR.ipynb
+++ b/lib/10_finding_MSR.ipynb
@@ -122,53 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Food     0.116799\n",
-      "Beer     0.141126\n",
-      "Smoke    0.107830\n",
-      "Games    0.068212\n",
-      "Books    0.187286\n",
-      "Hshld    0.134766\n",
-      "Clths    0.079160\n",
-      "Hlth     0.246641\n",
-      "Chems    0.077456\n",
-      "Txtls   -0.042721\n",
-      "Cnstr    0.084076\n",
-      "Steel    0.115809\n",
-      "FabPr    0.108280\n",
-      "ElcEq    0.272420\n",
-      "Autos    0.080954\n",
-      "Carry    0.173904\n",
-      "Mines   -0.053554\n",
-      "Coal     0.414689\n",
-      "Oil      0.165377\n",
-      "Util     0.145903\n",
-      "Telcm    0.122771\n",
-      "Servs    0.175264\n",
-      "BusEq    0.271952\n",
-      "Paper    0.097163\n",
-      "Trans    0.071099\n",
-      "Whlsl    0.126431\n",
-      "Rtail    0.207247\n",
-      "Meals    0.067400\n",
-      "Fin      0.223371\n",
-      "Other    0.043349\n",
-      "dtype: float64\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f18b9db9a80>]"
+       "[<matplotlib.lines.Line2D at 0x7f18b9e01690>]"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     },
