--- a/lib/15_interactive_plotting_and_monte_carlo_simulations_of_cppi.ipynb
+++ b/lib/15_interactive_plotting_and_monte_carlo_simulations_of_cppi.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8372dd3d7d6a459f8ddb8474a3759514",
+       "model_id": "3569b65c50b7474cacd24b8564e58bbb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -123,7 +123,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "eb9aaa3e4abe4ed88e3eeaf818415060",
+       "model_id": "9ff29d381a174f0c8ddad5794a042fd4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -232,7 +232,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0e1b7a22e4414bb59180938aef93f236",
+       "model_id": "7f9aa07459d24fd0b5c3721acc99fc88",
        "version_major": 2,
        "version_minor": 0
       },
@@ -339,13 +339,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "914c61ef4a5446fdaf1a17afc5e6eaff",
+       "model_id": "9f6e1d3a69a44948804157abe3bda07a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -444,12 +444,22 @@
     "    hist_ax.axhline(y = start, ls = \":\", color = \"black\")\n",
     "    hist_ax.axhline(y = tw_mean, ls = \":\", color = \"blue\")\n",
     "    hist_ax.axhline(y = tw_median, ls = \":\", color = \"purple\")\n",
-    "    hist_ax.annotate(f\"Mean: ${int(tw_mean)}\", xy=(.7, .9),xycoords='axes fraction', fontsize = 24)\n",
-    "    hist_ax.annotate(f\"Median: ${int(tw_median)}\", xy = (.7, .85), xycoords='axes fraction', fontsize = 24)\n",
+    "    hist_ax.annotate(f\"Mean: ${int(tw_mean)}\", xy=(.7, .9),xycoords='axes fraction', fontsize = 20)\n",
+    "    hist_ax.annotate(f\"Median: ${int(tw_median)}\", xy = (.7, .85), xycoords='axes fraction', fontsize = 20)\n",
     "\n",
     "    if (floor > 1e-3):\n",
-    "        hist_ax.axhline(y=start*floor, ls=\"--\", color=\"red\", linewidth=3)\n",
-    "        hist_ax.annotate(f\"Violations: {n_failures} ({p_failures*100:2.2f}%)\\nE(shortfall)=${e_shortfall:2.2f}\", xy=(.7, .7), xycoords='axes fraction', fontsize=24)\n",
+    "        hist_ax.axhline(\n",
+    "            y=start*floor,\n",
+    "            ls=\"--\", \n",
+    "            color=\"red\", \n",
+    "            linewidth=3\n",
+    "            )\n",
+    "        hist_ax.annotate(\n",
+    "            f\"Violations: {n_failures} ({p_failures*100:2.2f}%)\\nE(shortfall)=${e_shortfall:2.2f}\", \n",
+    "            xy=(.7, .7), \n",
+    "            xycoords='axes fraction', \n",
+    "            fontsize=20\n",
+    "            )\n",
     "\n",
     "    return\n",
     "\n",
