feat: implemented the chatper 17 simulating intereate rate changes and Funding Rate changes using CIR Model

--- a/lib/16_present_value_of_liabilities_and_funding_ratio.ipynb
+++ b/lib/16_present_value_of_liabilities_and_funding_ratio.ipynb
@@ -245,9 +245,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "3595538fb0dd4239b2c13617dc69437d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "interactive(children=(IntSlider(value=5, description='assets', max=10, min=1), FloatSlider(value=0.1, descript…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from IPython.display import display\n",
@@ -272,6 +287,13 @@
     ")\n",
     "\n",
     "display(controls)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As the illustration above shows, even if the assets do not go down in value, cash can be a risky asset if we think about the funding ratio rather than the asset value. Even though cash is a \"safe asset\" in the sense that the asset value does not go down, cash can be very risky asset because the value of the liabilities goes up when interest rates go down. Therefore, if we thinkg about the savings in terms of funding ratio, how much money do we have compared to what we need, then cash is a risky asset and can result in a decline in the funding ratio."
    ]
   }
  ],
